# clapkit

./: .gitignore  CMakeLists.txt  Doxyfile  README.md  README_8md.html  annotated.html  annotated_dup.js  ckApp_8cpp.html  ckApp_8cpp.js  ckApp_8h.html  ckApp_8h.js  ckApp_8h_source.html  ckButton_8cpp.html  ckButton_8h.html  ckButton_8h_source.html  ckCanvas_8cpp.html  ckCanvas_8h.html  ckCanvas_8h_source.html  ckCheckbox_8cpp.html  ckCheckbox_8h.html  ckCheckbox_8h_source.html  ckControlToolbox_8cpp.html  ckControlToolbox_8h.html  ckControlToolbox_8h_source.html  ckControl_8cpp.html  ckControl_8h.html  ckControl_8h_source.html  ckDropdown_8cpp.html  ckDropdown_8h.html  ckDropdown_8h_source.html  ckErrors_8h.html  ckErrors_8h.js  ckErrors_8h_source.html  ckGlobals_8h.html  ckGlobals_8h.js  ckGlobals_8h_source.html  ckLabel_8cpp.html  ckLabel_8h.html  ckLabel_8h_source.html  ckMacros_8h.html  (+276 more)
.github/workflows/: doxygen.yml
examples/kitchen-sink/: CMakeLists.txt  README.md  main.cpp
include/: ckApp.h  ckButton.h  ckCanvas.h  ckCheckbox.h  ckControl.h  ckControlToolbox.h  ckDropdown.h  ckErrors.h  ckGlobals.h  ckLabel.h  ckMacros.h  ckMemory.h  ckMenu.h  ckNetBaseSocket.h  ckNetClient.h  ckNetworking.h  ckObject.h  ckPlatform.h  ckProperty.h  ckRadiobox.h  ckTextArea.h  ckTextField.h  ckTimer.h  ckTypes.h  ckUtils.h  ckWindow.h  ck_pFocusableControl.h  ck_pTextableControl.h  ck_pValueContainingControl.h  dlmalloc.h  docs.h
misc/: clapkit-logo.ai
search/: all_0.js  all_1.js  all_10.js  all_11.js  all_12.js  all_13.js  all_14.js  all_15.js  all_16.js  all_17.js  all_19.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  defines_0.js  defines_1.js  defines_2.js  defines_3.js  defines_4.js  defines_5.js  defines_6.js  defines_7.js  enums_0.js  enumvalues_0.js  enumvalues_1.js  enumvalues_10.js  enumvalues_11.js  enumvalues_2.js  (+67 more)
src/: ckApp.cpp  ckButton.cpp  ckCanvas.cpp  ckCheckbox.cpp  ckControl.cpp  ckControlToolbox.cpp  ckDropdown.cpp  ckLabel.cpp  ckMemory.cpp  ckMenu.cpp  ckNetBaseSocket.cpp  ckNetClient.cpp  ckNetworking.cpp  ckObject.cpp  ckRadiobox.cpp  ckTextArea.cpp  ckTextField.cpp  ckTimer.cpp  ckUtils.cpp  ckWindow.cpp  ck_pFocusableControl.cpp  ck_pTextableControl.cpp  dlmalloc.c  dlmalloc_mac.c
